# omega

./: .gitignore  README.md  docker-compose.yml  spring-modulith_ANALYSIS_REPORT.md  spring-modulith_analysis.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  signoz-config.yaml
.github/: copilot-instructions.md
checkpoints/: checkpoint_20251113_234831.md  checkpoint_20251114_000431.json  checkpoint_20251114_000534.json  checkpoint_20251114_000645.json  checkpoint_20251114_001103.json  checkpoint_20251114_002521.json  checkpoint_20251114_002938.json  checkpoint_20251114_163400.json  checkpoint_20251114_181212.json  checkpoint_20251117_124614.json  checkpoint_20251117_163837.json  checkpoint_20251117_164823.json  checkpoint_20251117_181733.json  checkpoint_20251117_220255.json  checkpoint_20251117_230739.json  checkpoint_20251118_133854.json  checkpoint_20251118_140230.json  checkpoint_20251118_153740.json  checkpoint_20251118_161049.json  checkpoint_20251118_220139.json  checkpoint_20251118_222647.json  checkpoint_20251118_224051.json  checkpoint_20251118_225016.json  checkpoint_20251118_230232.json  checkpoint_20251118_233342.json  checkpoint_20251118_233726.json  checkpoint_20251118_235429.json  checkpoint_20251119_000224.json  checkpoint_20251119_001146.json  checkpoint_20251119_012013.json  checkpoint_20251119_205206.json  checkpoint_20251119_213539.json  checkpoint_20251119_215909.json  checkpoint_20251119_221640.json  checkpoint_20251119_224443.json  checkpoint_20251119_230803.json  checkpoint_20251120_113804.json  checkpoint_20251120_161212.json  checkpoint_20251120_163945.json  checkpoint_20251120_221238.json
dashboard/: .eslintrc.json  angular.json  package-lock.json  package.json
diagrams/: spring-modulith-core_classes.puml  spring-modulith-example-full_analysis.cml  spring-modulith-example-full_analysis.json  spring-modulith-example-full_context_map.cml  spring-modulith-example-full_manual_context_map.cml  spring-modulith-integration-test_classes.puml  spring-modulith-observability_classes.puml  spring-modulith-workspace.dsl  spring-modulith_appinspector.txt  spring-modulith_component.puml  spring-modulith_container.puml  spring-modulith_context.puml  spring-modulith_context_map.cml  structurizr-Containers.puml  structurizr-InventoryComponents-key.puml  (+7 more)
tools/: README.md  T019_IMPLEMENTATION_SUMMARY.md  T023_CONTEXT_MAPPER_IMPLEMENTATION_SUMMARY.md  alembic.ini  pyproject.toml  run_migration.py  test_router_isolated.py  validate_projects_api.py  validate_schema.py
tools/alembic/: env.py  script.py.mako
tools/docker/analysis-engine/: Dockerfile
tools/docker/signoz/: alertmanager-config.yml  otel-collector-config.yaml  prometheus.yml
tools/src/: clone-spring-modulith.sh  clone-spring-modulith.sh.backup  create-checkpoint.sh  install-java.sh
tools/src/omega_analysis/alembic/versions/: 001_initial_schema.py
tools/src/omega_analysis/analysis/coupling/: __init__.py  coupling_analyzer.py
tools/src/omega_analysis/analysis/drift/: __init__.py  drift_detector.py
tools/src/omega_analysis/analysis/gap/: __init__.py  gap_analyzer.py
tools/src/omega_analysis/analysis/runtime/: load_generator.py  otel_instrumentation.py  signoz_deployer.py
tools/src/omega_analysis/analysis/static/: __init__.py  appcat.py  codeql.py  context_mapper.py  dependency_extractor.py  java_parser.py  structurizr.py
tools/src/omega_analysis/api/: health.py  main.py
tools/src/omega_analysis/api/analysis/: __init__.py  analysis.py  architecture.py  baselines.py  dependencies.py
tools/src/omega_analysis/api/reports/: __init__.py  reports.py
tools/src/omega_analysis/api/v1/: __init__.py  projects.py  schemas.py
tools/src/omega_analysis/auth/: __init__.py  jwt_manager.py  middleware.py
tools/src/omega_analysis/cache/: __init__.py  manager.py  redis_client.py  serializers.py
tools/src/omega_analysis/config/: __init__.py  manager.py  settings.py
tools/src/omega_analysis/logging/: __init__.py  config.py  correlation.py  formatters.py
tools/src/omega_analysis/models/: analysis.py  base.py
tools/src/omega_analysis/services/: __init__.py
tools/src/omega_analysis/services/orchestration/: __init__.py  analysis_orchestrator.py  progress_tracker.py  result_aggregator.py  runtime_analyzer.py  static_analyzer.py
tools/src/omega_analysis/storage/: __init__.py  minio_client.py  service.py  storage_service.py
tools/src/omega_analysis/tracing/: __init__.py  config.py  metrics.py  spans.py
tools/src/utils/: README.md  __init__.py  appinspector_cli.py  context_mapper.py  install-angular-cli.sh  install-appinspector.sh  install-codeql.sh  install-context-mapper.sh  install-maven.sh  install-structurizr.sh  install-tree-sitter-java.sh  java_utils.py  parser_manager.py  report_generator.py  service_utils.py  setup-speckit.sh  spring_boot_analyzer.py  structurizr_cli.py  verify-context-mapper.sh
tools/tests/: .gitkeep
tools/tests/e2e/: test_context_mapper_e2e.py
tools/tests/integration/: INTEGRATION_TEST_RESULTS.md  test_analysis_endpoints.py  test_analysis_orchestrator.py  test_architecture_endpoints.py  test_baselines_endpoints.py  test_context_mapper_integration.py  test_coupling_analyzer.py  test_dependency_endpoints.py  test_drift_detector.py  test_end_to_end.py  test_gap_analyzer.py  test_infrastructure_services.py  test_progress_tracker.py  test_result_aggregator.py  test_runtime_orchestrator.py  test_spring_boot_analyzer_integration.py  test_static_analysis_integration.py  test_structurizr_cli_integration.py
tools/tests/unit/: test_context_mapper.py  test_java_utils.py  test_spring_boot_analyzer.py  test_structurizr_cli.py
(+100 files in other folders)
